# meeting-scheduler-env

./: .dockerignore  Dockerfile  PROBLEM STATEMENT.md  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_graders.py  validate-submission.sh
env/: __init__.py  environment.py  graders.py  internal_models.py  models.py  tasks.py
scripts/: validate.sh
server/: __init__.py  app.py  server.py
test/: test1.py  test2.py  test3.py
