[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-scheduler-env"
version = "1.0.0"
description = "Meeting Scheduler RL environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "openai"
]
