[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-scheduler-env"
version = "1.0.0"
description = "Meeting Scheduler RL environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

